@@ -1,3 +1,8 @@
+2006-02-01  David Reveman  <davidr@novell.com>
+
+	* hw/xgl/xglcompose.c (xglCompositeGeneral):
+	* hw/xgl/xglpict.c (xglUpdatePicture): repeat -> repeatType.
+
 2006-01-18  Dave Airlie  <airlied@linux.ie>
 
 	* Xext/Makefile.am:
